Setting markdown image

--- a/Naruto_Character_Classification_Pilot_2.ipynb
+++ b/Naruto_Character_Classification_Pilot_2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1L16cCmXVhq-J4L2EM5FNG71ZoF57NQao",
-      "authorship_tag": "ABX9TyPp8PDmCI13K4BraW6TSL+B",
+      "authorship_tag": "ABX9TyPh7NJKtIahBHh5VpJRM7jk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
         "id": "KnaPExnP_xl5"
       },
       "source": [
-        "![picture](https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF) \r\n",
+        "<!-- ![picture](https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF)  -->\r\n",
         "<center><img src = 'https://drive.google.com/uc?\r\n",
         "id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF'></center>\r\n"
       ]
@@ -475,7 +475,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 880
+          "height": 1000
         },
         "id": "2L8aRl9MnT2l",
         "outputId": "aae15ab6-a553-4b6f-dc84-93c404e1e038"
