--- a/Naruto_Character_Classification_Pilot_2.ipynb
+++ b/Naruto_Character_Classification_Pilot_2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1L16cCmXVhq-J4L2EM5FNG71ZoF57NQao",
-      "authorship_tag": "ABX9TyPh7NJKtIahBHh5VpJRM7jk",
+      "authorship_tag": "ABX9TyPwewAnVUVGdww2pDJL0GVx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,8 +147,7 @@
       },
       "source": [
         "<!-- ![picture](https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF)  -->\r\n",
-        "<center><img src = 'https://drive.google.com/uc?\r\n",
-        "id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF'></center>\r\n"
+        "<center><img src = 'https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF'></center>\r\n"
       ]
     },
     {
