Markdown image update

--- a/Naruto_Character_Classification_Pilot_2.ipynb
+++ b/Naruto_Character_Classification_Pilot_2.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "mount_file_id": "1L16cCmXVhq-J4L2EM5FNG71ZoF57NQao",
-      "authorship_tag": "ABX9TyPwewAnVUVGdww2pDJL0GVx",
+      "authorship_tag": "ABX9TyM5GDpgVy+Ce2YhOtBGpFf7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,8 +145,22 @@
         "id": "KnaPExnP_xl5"
       },
       "source": [
-        "<!-- ![picture](https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF)  -->\r\n",
-        "<center><img src = 'https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF'></center>\r\n"
+        "<center>\r\n",
+        "\r\n",
+        "![picture](https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF) \r\n",
+        "\r\n",
+        "<!-- <img src = 'https://drive.google.com/uc?id=1Dbt7q3fwL183bERFfh4gIIdsOLfpldeF'> -->\r\n",
+        "</center>\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZmlnDhgH1vsp"
+      },
+      "source": [
+        "**DOUBT:**  \r\n",
+        "Why does the `<img>` tag image not get displayed in github."
       ]
     },
     {
